style(actor): fix odd input position shifts due to outline-on-hover

--- a/styles/low.css
+++ b/styles/low.css
@@ -84,7 +84,7 @@
 }
 
 input:hover {
-  border-width: 4px;
+  /* border-width: 4px; */
   border-color: rgba(37, 124, 37, 0.7);
 }
 
